[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    numpy
    pandas
    cmtj
    scipy
    matplotlib
    pyqt6
    pyopengl
    pyqtgraph
    pydantic
    click

[metadata]
name = Pymag
author = AGH Maglay
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
